LEAFLET added to index.html

--- a/public/styles/screen.styl
+++ b/public/styles/screen.styl
@@ -12,13 +12,14 @@
 
 // ## Frameworks
 @import 'frontbase'
+@import '../libs/leaflet/dist/leaflet.css'
 
 // ## Web styles
 @import 'global'
 @import 'layout'
 
 // ## Components
-// @import 'parts/*'
+@import 'parts/*'
 
 // ## Compositions
 // @import 'comps/*'
