map with circles

--- a/public/styles/frontbase.styl
+++ b/public/styles/frontbase.styl
@@ -49,8 +49,8 @@ img
 	visibility: hidden
 
 // WebKit bug documented here: https://bugs.webkit.org/show_bug.cgi?id=82489
-svg
-	max-height: 100%
+// svg
+// 	max-height: 100%
 
 // Convert px to ems based on base size
 em($size, $base = $base-font-size)
