--- a/public/styles/bootstrap.styl
+++ b/public/styles/bootstrap.styl
@@ -51,3 +51,41 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 
 // Utility classes
 @import "../libs/bootstrap-stylus/stylus/responsive-utilities";
+
+//edit
+.navbar
+	border-radius: 0px !important
+
+.search__box input
+	margin: 15px 0
+	padding: 0 10px
+
+.list_group__box
+	padding: 0 14px !important
+	margin-top: calc(100vh - 240px)
+	box-shadow: none
+
+.btn__play
+	text-decoration: none
+
+.btn__play span.btn
+	padding: 4px 2px
+
+.col__list
+	padding: 0 2px !important
+
+.list-group-item
+	padding: 10px 5px
+
+.active__title
+	display: inline-block
+	margin: 15px 20px 10px 0 !important
+
+.btn__callbtn
+	width: 32px
+	height: 32px
+	cursor: pointer
+	margin-top: 6px
+
+.btn__callbtn .glyphicon
+	padding-top: 4px
