--- a/public/styles/parts/map.styl
+++ b/public/styles/parts/map.styl
@@ -9,3 +9,11 @@ body
 
 .leaflet-control-zoom
 	display none
+
+#map
+	position: absolute
+	top: 52px
+	left: 0px
+	bottom: 0px
+	width: 100% !important
+	z-index: 0
