--- a/public/styles/variables.styl
+++ b/public/styles/variables.styl
@@ -14,3 +14,9 @@ $c-comp = #666
 
 $text-color = #000
 $text-back = #fff
+//helper-class
+.radius--left
+	border-radius: 4px 0 0 4px !important
+
+.radius--right
+	border-radius: 0 4px 4px 0 !important
