refactor detail of activity

--- a/public/styles/bootstrap.styl
+++ b/public/styles/bootstrap.styl
@@ -71,11 +71,9 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 	box-shadow: none
 .list_group__box--offer .list-group-item
 	background-color: rgba(255,255,255,0.75) !important
-.btn__play, .message--cancel
+.message--cancel
 	text-decoration: none
 
-.btn__play span.btn
-	padding: 4px 2px
 
 .col__list
 	padding: 0 2px !important
@@ -86,15 +84,6 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 .active__title
 	display: inline-block
 	margin: 15px 20px 10px 0 !important
-
-.btn__callbtn
-	width: 32px
-	height: 32px
-	cursor: pointer
-	margin-top: 6px
-
-.btn__callbtn .glyphicon
-	padding-top: 4px
 
 .add_entry__link
 	display: block
@@ -126,15 +115,24 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 	color: #c4c4c4
 
 
-.btn__cross .glyphicon, .btn__callbtn .glyphicon, .btn__send-message .glyphicon
+.btn__cross .glyphicon, .btn__send-message .glyphicon
 	padding-top: 4px
 
 .message--send
-	top: 10px
+	top: 35px
 
-.contact__title
-	margin: 5px 0 19px
+.input__message
+	margin-top: 15px
+
+.sport__title
+	display: inline-block
+	margin-bottom: 0px !important
 	padding: 0
+
+.sport__info
+	margin-top: 10px
+.sport__info li
+	margin-right: 15px
 
 @media (max-width: 400px)
 	.add_entry__link
