New header with separated filters

--- a/public/styles/parts/map.styl
+++ b/public/styles/parts/map.styl
@@ -1,19 +1,7 @@
-html
-	height 100%
-
-body
-	padding 0
-	margin 0
-	height 100%
-
+.map
+	absolute left bottom right
+	top $headerHeight
+	z-index 0
 
 .leaflet-control-zoom
 	display none
-
-#map
-	position: absolute
-	top: 52px
-	left: 0px
-	bottom: 0px
-	width: 100% !important
-	z-index: 0
