--- a/public/styles/variables.styl
+++ b/public/styles/variables.styl
@@ -2,7 +2,7 @@ $gratio = 1.618
 $pi = 3.14159
 
 $base-font-size = 16px
-$font-family-base = $font-family-sans-serif
+$font-family-base = 'PT Sans', $font-family-sans-serif
 $font-family-head = $font-family-base
 
 $radius = 2px
@@ -14,6 +14,10 @@ $c-comp = #666
 
 $text-color = #000
 $text-back = #fff
+
+$headerHeight = 48px
+
+
 //helper-class
 .radius--left
 	border-radius: 4px 0 0 4px !important
