Implemented a basic workflow of entry detail interactions

--- a/public/styles/bootstrap.styl
+++ b/public/styles/bootstrap.styl
@@ -61,13 +61,12 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 	padding: 0 10px
 
 .list_group__box
-	padding: 0 3px !important
-	margin-top: calc(100vh - 240px)
+	margin 0 10px 10px
 	box-shadow: none
 
 .list_group__box--offer
 	padding: 0 14px !important
-	margin-top: calc(100vh - 125px)
+	margin-top: 0
 	box-shadow: none
 .list_group__box--offer .list-group-item
 	background-color: rgba(255,255,255,0.75) !important
