--- a/public/styles/parts/map.styl
+++ b/public/styles/parts/map.styl
@@ -1,7 +1,8 @@
 .map
-	absolute left bottom right
-	top $headerHeight
+	position relative
 	z-index 0
+	height 90%
+	height calc(100vh - 48px)
 
-.leaflet-control-zoom
+.leaflet-control-zoom, .leaflet-control-attribution
 	display none
