--- a/public/styles/parts/site.styl
+++ b/public/styles/parts/site.styl
@@ -1,9 +1,12 @@
 .site
 		&-header
+			position relative
+			z-index 100
 			background #C8FF00
 			height $headerHeight
 			line-height $headerHeight
 			padding 0 10px
+			box-shadow 0 1px 0 0 rgba(0,0,0,0.1)
 
 
 		&-logo
