Better style of entries list and detail

--- a/public/styles/bootstrap.styl
+++ b/public/styles/bootstrap.styl
@@ -81,8 +81,7 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 	padding: 10px 5px
 
 .active__title
-	display: inline-block
-	margin: 15px 20px 10px 0 !important
+	margin: 14px 20px 10px 0
 
 .add_entry__link
 	display: block
