--- a/public/styles/variables.styl
+++ b/public/styles/variables.styl
@@ -9,11 +9,19 @@ $radius = 2px
 $spacing = ceil($base-font-size * $gratio)
 $padding = ceil($base-font-size * $gratio)
 
-$c-main = #009933
-$c-comp = #666
+// http://www.colourlovers.com/palette/109188/antidesign
+$c-main = #C8FF00
+$c-comp = #FA023C
+$c-hell = #666
 
-$text-color = #000
+$text-color = #040004
 $text-back = #fff
+
+$brand-primary =       #FA023C
+$brand-success =       #C8FF00
+$brand-info =          #5bc0de
+$brand-warning =       #f0ad4e
+$brand-danger =        #d9534f
 
 $headerHeight = 48px
 
