--- a/public/styles/global.styl
+++ b/public/styles/global.styl
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6
 	text-rendering optimizeLegibility
 
 p
-	margin 0 0 $spacing
+	margin 0 0 0.5em
 blockquote
 	font-style italic
 ul, li
