Dashboard: Empty state handling

--- a/public/styles/parts/listing.styl
+++ b/public/styles/parts/listing.styl
@@ -29,6 +29,7 @@
 	.listing-overbanner
 		display none
 
+
 .listing.view-detailEntry
 	margin-top -151px
 
@@ -36,4 +37,9 @@
 		display none
 
 
+.listing.view-empty
+	margin-top calc(-100vh + 98px)
+	text-align center
+	background #FFF
+	padding $spacing
 
