Hotfixed a basic adding page style

--- a/public/styles/bootstrap.styl
+++ b/public/styles/bootstrap.styl
@@ -66,7 +66,7 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 
 .list_group__box--offer
 	padding: 0 14px !important
-	margin-top: 0
+	margin-top: -48px
 	box-shadow: none
 .list_group__box--offer .list-group-item
 	background-color: rgba(255,255,255,0.75) !important
