add button to main page

--- a/public/styles/bootstrap.styl
+++ b/public/styles/bootstrap.styl
@@ -133,6 +133,27 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 .sport__info li
 	margin-right: 15px
 
+.circle
+	border-radius: 50%
+	width: 50px
+	height: 50px
+	background-color: $c-comp
+	position: absolute
+	top: -40px
+	right: 10px
+	display: block
+	text-align: center
+	line-height: 50px
+	color: #ffffff
+	font-size: 24px
+	font-weight: bolder
+	z-index: 1
+	text-decoration: none
+a.circle:hover
+	text-decoration: none
+	color: #ffffff
+
+
 @media (max-width: 400px)
 	.add_entry__link
 		width: 140px
