--- a/public/styles/parts/listing.styl
+++ b/public/styles/parts/listing.styl
@@ -13,6 +13,8 @@
 		font-size 16px
 		font-weight normal
 		padding 0 10px
+		position: relative
+		z-index: 2
 
 		&:hover
 			text-decoration none
@@ -26,7 +28,7 @@
 	margin-top calc(-100vh + 98px)
 	transition all 666ms
 
-	.listing-overbanner
+	.listing-overbanner, .circle
 		display none
 
 
@@ -35,6 +37,7 @@
 
 	.listing-overbanner
 		display none
+
 
 
 .listing.view-empty
