Add: show form on map click

--- a/public/styles/parts/addForm.styl
+++ b/public/styles/parts/addForm.styl
@@ -2,10 +2,10 @@
 	padding: 0 14px !important
 	margin-top: -48px
 	box-shadow: none
+	transition all 666ms
 
 	.list-group-item
 		background-color: rgba(255,255,255,0.75) !important
 
-.show-form-top .list-group__box--offer
-	margin-top calc(-100vh + 98px)
-	transition all 666ms
+.show-form-top .list_group__box--offer
+	margin-top -133px - 10px
