Better colors and form controls

--- a/public/styles/bootstrap.styl
+++ b/public/styles/bootstrap.styl
@@ -53,6 +53,10 @@ $border-radius-base = $border-radius-large = $border-radius-small = $radius
 @import "../libs/bootstrap-stylus/stylus/responsive-utilities";
 
 //edit
+.form-control
+	boder-radius $radius !important
+	appearance none
+
 .navbar
 	border-radius: 0px !important
 
