--- a/public/styles/variables.styl
+++ b/public/styles/variables.styl
@@ -10,25 +10,21 @@ $spacing = ceil($base-font-size * $gratio)
 $padding = ceil($base-font-size * $gratio)
 
 // http://www.colourlovers.com/palette/109188/antidesign
-$c-main = #C8FF00
-$c-comp = #FA023C
+$c-main = #E5F04C
+$c-comp = $c-main
 $c-hell = #666
 
 $text-color = #040004
 $text-back = #fff
 
-$brand-primary =       #FA023C
+$btn-primary-color = #000
+
+$brand-primary =       $c-main
 $brand-success =       #C8FF00
 $brand-info =          #5bc0de
 $brand-warning =       #f0ad4e
 $brand-danger =        #d9534f
 
+$border-radius-base = $radius
+
 $headerHeight = 48px
-
-
-//helper-class
-.radius--left
-	border-radius: 4px 0 0 4px !important
-
-.radius--right
-	border-radius: 0 4px 4px 0 !important
