--- a/public/styles/parts/site.styl
+++ b/public/styles/parts/site.styl
@@ -2,7 +2,7 @@
 		&-header
 			position relative
 			z-index 100
-			background #C8FF00
+			background $c-main
 			height $headerHeight
 			line-height $headerHeight
 			padding 0 10px
@@ -10,7 +10,7 @@
 
 
 		&-logo
-			color rgba(#413D3D, 0.75)
+			color rgba(#000, 0.5)
 			font-weight bold
 			font-size 22px
 			text-transform uppercase
@@ -23,4 +23,4 @@
 
 			i
 				font-style normal
-				color #040004
+				//color #040004
